--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: corretto11
+      java: openjdk8
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
@@ -11,6 +11,7 @@ phases:
     commands:
       - echo Build started on `date`
       - mvn install
+      - mvn test
   post_build:
     commands:
       - echo Build completed on `date`
